<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication.ui.perfil.HomeFragment"
        android:label="@string/perfil"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.myapplication.ui.gallery.GalleryFragment"
        android:label="@string/avance_curso"
        tools:layout="@layout/fragment_gallery" />
    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.myapplication.ui.slideshow.SlideshowFragment"
        android:label="@string/reglamento"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/temario"
        android:name="com.example.myapplication.TemarioFragment"
        android:label="@string/temario"
        tools:layout="@layout/fragment_temario" />
    <fragment
        android:id="@+id/sesiones"
        android:name="com.example.myapplication.sesionesFragment"
        android:label="fragment_sesiones"
        tools:layout="@layout/fragment_sesiones" />
</navigation>